--- a/gui/src/index.css
+++ b/gui/src/index.css
@@ -1,3 +1,5 @@
+@import url('./xy-theme.css');
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -66,4 +68,21 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+ 
+html,
+body {
+  margin: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+ 
+#app {
+  width: 100vw;
+  height: 100vh;
+}
+ 
+.wrapper {
+  flex-grow: 1;
+  height: 100%;
 }
