--- a/gui/src/index.css
+++ b/gui/src/index.css
@@ -151,3 +151,10 @@ body {
     #176cd4 360deg
   );
 }
+
+.toolbar button {
+  padding: 5px 10px;
+  margin: 0 5px;
+  background-color: #343232;
+  border-color: #ebefec;
+}
