--- a/gui/src/index.css
+++ b/gui/src/index.css
@@ -241,3 +241,11 @@ body {
   width: 55px;  /* Größe anpassen */
   height: auto;
 }
+
+.sidebar {
+  background: '#090909';
+  color: 'white';
+  transition: 'width 0.3s ease';
+  padding: '10px';
+  display: 'flex';
+}
